themes/soctor-who-theme/static/css/desktop.css
@media only screen and (min-width: 768px) {

header {
    width: 850px;
    margin-top: 40px;
    margin-left: auto;
    margin-right: auto;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

header div.title {
    display: flex;
    justify-content: baseline;
}

header div.title a {
    height: 1em;
}

header div.title a img {
    transform: translateY(-10px);
}

main {
    width: min(1000px, 90%);
    margin-left: auto;
    margin-right: auto;
}

nav img {
    vertical-align: middle;
}

div#split {
    display: grid;
    column-gap: 20px;
    grid-template-columns: 65% 35%;
}

div#split div {
    padding-top: 0;
}

div#split h2 {
    margin-top: 15px;
    margin-bottom: 5px;
}

a#join{
    margin: 10px;
    height: 1.2em;
}

div#who-can-join {
    display: grid;
    column-gap: 20px;
    grid-template-columns: auto auto auto;
}

footer {
    width: 700px;
    margin-bottom: 50px;
}
    
}

